getting movie bilder

--- a/movie_search_app/views/results.ejs
+++ b/movie_search_app/views/results.ejs
@@ -6,5 +6,6 @@
 
 <!-- use forEach to iterate -->
 <% data["Search"].forEach(function(element){ %>
-    <li><%= element.Title %></li>
+    <p><strong><%= element.Title%></strong> - <i><%= element.Year%></i></p>
+    <img src= <%=element.Poster%> alt="">
 <% }); %>
