--- a/movie_search_app/views/search.ejs
+++ b/movie_search_app/views/search.ejs
@@ -1,4 +1,6 @@
-<form action="http://gssr.info">
+<h1>Search for a Movie</h1>
+<form action="/results" method="GET">
     <label for="title">Movie Title</label>
-    <input id = "title" type="text" placeholder = "Title">
-    </form>
+    <input id = "title" type="text" placeholder = "Search term" name = "search">
+    <input type="submit">
+</form>
